CHANGELOG for Fall of Eden
--------------------------

--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.3f3
-------------
* Fixed minor bug in drake AI

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3f2
-------------
* Fixed a bug with disabled buttons not rendering properly.
* Removed text selections on the buttons (it is still technically possible, but not by pressing/dragging on the buttons)
* Changed the default button font to Impact and added a black outline for readability.
* Known GUI bugs:
 - Toggle pictures option doesn't do anything.
 - Toggle key shortcuts doesn't do anything.

Version 0.3f
------------
* Complete rewrite of the Graphical User Interface, based on Raphael.js (a wrapper around SVG). Still a few kinks left to work out with it, especially testing browser compatability.
* Known GUI bugs:
 - Button flicker in Chrome (works in firefox).
 - Slight lag at start of combat when old sprites might show up.

Version 0.3e
------------
* Added an ugly fallback solution for save to file not working offline (save to text button in data menu)
* Typos etc
* Added an exploration encounter to the den, for people who thought things were going too easy. Good luck with that one. Might need balancing later.
* Added new Gwendy loss scenes:
 - Orgasm denial
* Significantly fleshed out the Lady's Blessing inn in Rigard, written by Del. There is a hidden encounter involving a quite extensive sex scene, if you can find it.
* Added an event at the gates to the Royal grounds, needed to activate Lei (part of the main quest)
* Added the next part of the main quest, triggered by talking to Lei and the mysterious couple. There is no follow-up after you find out who they are.

Version 0.3d2
-------------
* Minor Magnus fix