@@ -8,6 +8,8 @@ CHANGELOG for Fall of Eden
 Version 0.3f3
 -------------
 * Fixed minor bug in drake AI
+* Added the next stage in the main quest, approaching the court mage's tower
+* Added three win scenes to the wildcat encounters. Much more to come
 
 --------------------------------------------
              PREVIOUS VERSIONS
